# OpenDVCW

./: .gitignore  .gitmodules  Callbacks.py  DataGen.py  Dockerfile  OpenDVCW.py  OpticalFlowEval.ipynb  README.md  eval.ipynb  evaluator.py  flow_utils.py  flyingchairs_data_loader.py  helpers.py  load.py  motion.py  requirements.txt  runner.py  test.ipynb  test_runner.ipynb  test_wave.ipynb  train.ipynb  train.py  train_dev_testing.ipynb  train_models.ipynb  train_models_haar.ipynb  train_models_haar_odvc.ipynb  train_models_sym3.ipynb  wavelets_dev.py
.devcontainer/: devcontainer.json
cpp_encoder/: CMakeLists.txt  README.md  main.cpp
development/: fc_smaill_train.txt  test_wave.ipynb  testing.ipynb  wavelets_dev.py
tools/: gen_rgb_from_yuv.py  gen_vimeo_npy.py  info-theory.py  plot_psnr_bpp.ipynb
train_examples/: train_models_db2.ipynb
train_models/: train_1024.ipynb  train_16384.ipynb  train_2048.ipynb  train_256.ipynb  train_4096.ipynb  train_4096_object.ipynb  train_512.ipynb  train_8192.ipynb
